--- a/portfolio-animating.html
+++ b/portfolio-animating.html
@@ -144,7 +144,7 @@
                     -->
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
-                            <video class="img-fluid" src="assets/img/video/cutscene.mp4" alt="Fight Cutscene"  controls></video>
+                            <video class="img-fluid" src="assets/img/video/fight_cutscene.mp4" alt="Fight Cutscene"  controls></video>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Fight Cutscene Testing</div>
                                 <div class="portfolio-extra-description">
@@ -156,7 +156,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
-                            <video class="img-fluid" src="assets/img/video/closet.mp4" alt="Closet"  controls></video>
+                            <video class="img-fluid" src="assets/img/video/closet_doors.mp4" alt="Closet"  controls></video>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Closet Hiding Animations</div>
                                 <div class="portfolio-extra-description">
