--- a/portfolio-modeling.html
+++ b/portfolio-modeling.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
-                            <video class="img-fluid" src="assets/img/video/render.mp4" alt="Render" controls></video>
+                            <video class="img-fluid" src="assets/img/video/particle_render.mp4" alt="Particle Render" controls></video>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Made for fun :P</div>
                             </div>
