--- a/dualityidea.html
+++ b/dualityidea.html
@@ -58,6 +58,7 @@
                             <ul class="sub-nav text-uppercase d-flex justify-content-center py-2" id="aboutSubNav">
                                 <li class="nav-item"><a class="nav-link" href="why-hire-me.html"><strong>Why Hire Me</strong></a></li>
                                 <li class="nav-item"><a class="nav-link" href="testimonials.html"><strong>Testimonials</strong></a></li>
+                                <li class="nav-item"><a class="nav-link" href="schedule.html"><strong>My Schedule</strong></a></li>
                             </ul>
                             
                             <ul class="sub-nav text-uppercase d-flex justify-content-center py-2" id="servicesSubNav">
@@ -178,7 +179,7 @@
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Contact Me</span></h2>
                 </div>
-                <p><span style="color: #f0f0f0;">Thanks for taking the time to explore my work! If you've liked what you've seen and think we could make something great together, I'd love to hear from you. Whether you need expert animation, detailed scripting, unique building, or even a bit of 3D modeling, I'm here to help bring your gaming ideas to life.</span></p>
+                <p><span style="color: #f0f0f0;">Thanks for taking the time to explore my work! If you've liked what you've seen and think we could make something great together, I'd love to hear from you. Whether you need animation, scripting, building, or even a bit of 3D modeling, I'm here to help bring your ideas to reality.</span></p>
                 <p><span style="color: #f0f0f0;">Don't be a stranger - feel free to reach out with any questions, project ideas, or even just to chat about game development. 
                     I'm available on Discord as distinguished_duccer 7 days a week because I am chronically online. :D</span></p>
                 <div class="text-center">
@@ -208,7 +209,7 @@
         </footer>
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
-<script src="js/scripts.js"></script>  
+        <script src="js/scripts.js"></script>
     </body>
     <div id="lightbox" class="lightbox-overlay">
         <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
