--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                             <ul class="sub-nav text-uppercase d-flex justify-content-center py-2" id="aboutSubNav">
                                 <li class="nav-item"><a class="nav-link" href="why-hire-me.html"><strong>Why Hire Me</strong></a></li>
                                 <li class="nav-item"><a class="nav-link" href="testimonials.html"><strong>Testimonials</strong></a></li>
+                                <li class="nav-item"><a class="nav-link" href="schedule.html"><strong>My Schedule</strong></a></li>
                             </ul>
                             
                             <ul class="sub-nav text-uppercase d-flex justify-content-center py-2" id="servicesSubNav">
@@ -98,17 +99,11 @@
                     <strong>If you are here from me personally sending you a message in any social media, then chances are you may get prices off or large discounts, go check out <a href="payments.html" class="hover-link">Payments</a> to see if you get any discounts.</strong>
                 </span>
               </p>
-              <p>
-                <span style="color: rgb(255, 59, 59);">
-                  <strong>This entire portfolio is under a complete redesign, so things may not work as expected, such as the dropdown above. Use <a href="temporarynavigation.html" class="hover-link">Temporary Navigation</a> to navigate the website. Sorry!</strong>
-                </span>
-              </p>
             </div>
-
           </section>
 
         <div class="divider"></div>
-
+        <!--
         <section class="page-section" id="creation">
           <div class="center-container">
               <div class="text-center">
@@ -124,7 +119,7 @@
                           <div class="portfolio-extra-description">
                               <p>This character I made in a day or so was the result of a dream after playing a tad bit too much of <a href="https://www.roblox.com/games/18687417158/Forsaken" target="_blank" class="hover-link">Forsaken</a>.</p>
                               <p>After having the dream, I wrote quite a bit of the character, abilities, just some fanmade little ideas.</p>
-                              <p>Click <a href="dualityidea.html" class="hover-link">HERE</a> to see everything that I wrote, it's a lot, so make sure you're ready to read a bunch.</p>
+                              <p>Click <a href="nil" class="hover-link">HERE</a> to see everything that I wrote, it's a lot, so make sure you're ready to read a bunch.</p>
                           </div>
                           <button class="toggle-description" style="display: none;">Show Description <span class="arrow">&#x25BC;</span></button>
                       </div>
@@ -134,13 +129,207 @@
       </section>
 
       <div class="divider"></div>
+    -->
+      <section class="page-section" id="process">
+        <div class="container text-center">
+          <h2 class="section-heading text-uppercase mb-4">My Development Process</h2>
+          <div class="row">
+            <div class="col-md-6">
+              <h3 class="mb-3">Deciding Work</h3>
+              <ul class="process-list">
+                <li>
+                  <div class="process-toggle">
+                    <span class="arrow">&#x25BC;</span>
+                    <span class="process-title">Messaged</span>
+                  </div>
+                  <div class="process-description">
+                    <p>
+                      This is the initial point of contact where you or I reach out with ideas. 
+                      This is basic information about the project scope things like the type of game, style, features, and other cool stuff.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="process-toggle">
+                    <span class="arrow">&#x25BC;</span>
+                    <span class="process-title">Talking it out</span>
+                  </div>
+                  <div class="process-description">
+                    <p>
+                      Here, we talk more into the project details and stuff like any questions, establish goals, talk 
+                      about budget and timeline, and figure out the rough scope of what needs to be made.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="process-toggle">
+                    <span class="arrow">&#x25BC;</span>
+                    <span class="process-title">Originality and Fun</span>
+                  </div>
+                  <div class="process-description">
+                    <p>
+                      I evaluate whether the idea is fresh, engaging, and truly something that I can help elevate. 
+                      If it’s creative or has something I think I'd like to work on, I’ll move forward. If not, I’m always 
+                      transparent about whether I’m the right fit or if it needs more refinement.
+                    </p>
+                    <p>
+                      If I'm not, don't be sad because I have many other connections to people who likely would work on the type of thing you may have.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="process-toggle">
+                    <span class="arrow">&#x25BC;</span>
+                    <span class="process-title">Reality Check</span>
+                  </div>
+                  <div class="process-description">
+                    <p>
+                      After we have a general idea, I’ll get a quick reality check based on what is needed, 
+                      estimated time to build, and any potential roadblocks. This helps me understand if the project is 
+                      doable within the desired timeframe and budget.
+                    </p>
+                  </div>
+                </li>
+                <li>
+                  <div class="process-toggle">
+                    <span class="arrow">&#x25BC;</span>
+                    <span class="process-title">Locking It In</span>
+                  </div>
+                  <div class="process-description">
+                    <p>
+                      Finally, if everything looks good and we both feel confident, we’ll agree on the details and make a final 
+                      plan to move into development. This includes making deadlines, deliverables, 
+                      payment structure, and setting up clear communication so there are no surprises later.
+                    </p>
+                  </div>
+                </li>
+              </ul>
+            </div>            
+            <div class="col-md-6">
+                <h3 class="mb-3">Creating Work</h3>
+                <ul class="process-list">
+                  <li>
+                    <div class="process-toggle">
+                      <span class="arrow">&#x25BC;</span>
+                      <span class="process-title">Info on creation</span>
+                    </div>
+                    <div class="process-description">
+                      <p>
+                        Before I start building anything, I like to take a bit of time to understand exactly what’s needed. 
+                        This is like gathering reference, asking questions, research on how it should look (which is way more common than you'd think, for example, researching 6 hours on how helicopters land), and just getting an overall grasp on the vision and scope of the project.
+                        It's not just about having a plan, it's about actually setting things up so we’re working smart and not dumb, cause dumb work is bad.
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="process-toggle">
+                      <span class="arrow">&#x25BC;</span>
+                      <span class="process-title">If I think I can pull it off properly</span>
+                    </div>
+                    <div class="process-description">
+                      <p>
+                        I’ll always take a moment here to be honest with myself (and with you) about whether this is something I can do right, because I always try to be as honest as possible with people I work with.
+                        Quality matters to me much more than quantity, and I’d rather pass on a project than give you something I’m not confident in. 
+                        But if I think I can make it great then I'm all in and the process continues.
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="process-toggle">
+                      <span class="arrow">&#x25BC;</span>
+                      <span class="process-title">Setup</span>
+                    </div>
+                    <div class="process-description">
+                      <p>
+                        This is where I do all of the work. I’ll create a clean baseplate or place where everything will be made, this is also to protect my work so I can get paid before sending it over.
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="process-toggle">
+                      <span class="arrow">&#x25BC;</span>
+                      <span class="process-title">Actual creation - a rough draft of the work</span>
+                    </div>
+                    <div class="process-description">
+                      <p>
+                        Here’s where the ideas actually start becoming something. 
+                        I’ll build out a first version of the work and just make sure everything works the way it should. This part is all about function and testing, not perfection.
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="process-toggle">
+                      <span class="arrow">&#x25BC;</span>
+                      <span class="process-title">Better quality creation</span>
+                    </div>
+                    <div class="process-description">
+                      <p>
+                        Now that we’ve got the actual idea and draft in place, it’s time to go back through and clean things up.
+                        I’ll polish the models, scripts, UI, animation, or whatever I’m working on, refining it until it feels right and looks good. This is where a lot of the final look and feel comes together, basically rendering.
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="process-toggle">
+                      <span class="arrow">&#x25BC;</span>
+                      <span class="process-title">Final small details</span>
+                    </div>
+                    <div class="process-description">
+                      <p>
+                        These are the finishing touches like small things that people might not notice or pay attention to at first, but the small things that make the work "feel" better if that makes sense.
+                        Whether it’s visuals, transitions, or optimizing how something runs, I always go through and make sure everything is just right but not glorified.
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="process-toggle">
+                      <span class="arrow">&#x25BC;</span>
+                      <span class="process-title">Finished</span>
+                    </div>
+                    <div class="process-description">
+                      <p>
+                        At this point, everything’s been tested, cleaned up, and ready to go. I’ll do a final review, confirm it meets the goals you or I set, and make sure you're happy with the results.
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="process-toggle">
+                      <span class="arrow">&#x25BC;</span>
+                      <span class="process-title">Payment - If pay per asset is requested.</span>
+                    </div>
+                    <div class="process-description">
+                      <p>
+                        If we're working on a per asset payment setup, this is when that gets sorted out. I like to keep this process straightforward and fair, with clear communication so we’re both on the same page about what’s been delivered and what’s owed.
+                      </p>
+                    </div>
+                  </li>
+                  <li>
+                    <div class="process-toggle">
+                      <span class="arrow">&#x25BC;</span>
+                      <span class="process-title">Importing</span>
+                    </div>
+                    <div class="process-description">
+                      <p>
+                        Once everything’s final and paid (if pay per asset is used), I’ll get the work properly imported into your game that it was made for. 
+                        I’ll double-check that everything is placed correctly and runs as expected in the live setting.
+                        From here, the work is owned by you and you can do whatever you want with it.
+                      </p>
+                    </div>
+                  </li>                  
+                </ul>
+            </div>
+          </div>
+        </div>
+      </section>          
+
+      <div class="divider"></div>
 
         <section class="contact-page-section" id="contact">
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Contact Me</span></h2>
                 </div>
-                <p><span style="color: #f0f0f0;">Thanks for taking the time to explore my work! If you've liked what you've seen and think we could make something great together, I'd love to hear from you. Whether you need expert animation, detailed scripting, unique building, or even a bit of 3D modeling, I'm here to help bring your gaming ideas to life.</span></p>
+                <p><span style="color: #f0f0f0;">Thanks for taking the time to explore my work! If you've liked what you've seen and think we could make something great together, I'd love to hear from you. Whether you need animation, scripting, building, or even a bit of 3D modeling, I'm here to help bring your ideas to reality.</span></p>
                 <p><span style="color: #f0f0f0;">Don't be a stranger - feel free to reach out with any questions, project ideas, or even just to chat about game development. I'm available on Discord as distinguished_duccer 7 days a week because I am chronically online. :D</span></p>
                 <div class="text-center">
                     <a href="http://discordapp.com/users/1027686323282260069" target="_blank" class="btn btn-primary btn-xl text-uppercase"><span style="color: #ffffff;">Contact Me Here</span></a>
@@ -170,7 +359,7 @@
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
         <script src="js/scripts.js"></script>   
-        
+        <script src="js/totopbtn.js"></script> 
     </body>
     <div id="lightbox" class="lightbox-overlay">
         <div id="lightbox-prev" class="lightbox-arrow lightbox-arrow-left">&lsaquo;</div>
