embed support and meta tags

--- a/free-stuff.html
+++ b/free-stuff.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Free Stuff" />
+<meta property="og:description" content="Hey look, an embed! This is the free stuff page of my portfolio where you can download free things I've made." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/free-stuff.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
