--- a/games.html
+++ b/games.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Games and My Work" />
+<meta property="og:description" content="Hey look, an embed! This is the games and work page of my portfolio where you can see what games I've worked for before." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/games.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
