--- a/html-page-template.html
+++ b/html-page-template.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Template Page" />
+<meta property="og:description" content="lol, this shouldn't be here, this is just the template page I use." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/html-page-template.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
