--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Home" />
+<meta property="og:description" content="Hey look, an embed! This is my portfolio where you can see what I do for Roblox games and to hire me, just click the link to go here." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
