--- a/payments.html
+++ b/payments.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Payments & Pricing" />
+<meta property="og:description" content="Hey look, an embed! This is the pricing page of my portfolio where you can see how much my work costs before hiring me." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/payments.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
