--- a/temporarynavigation.html
+++ b/temporarynavigation.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Temporary Navigation" />
+<meta property="og:description" content="This isn't used anymore right now!" />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/temporarynavigation.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
