--- a/why-hire-me.html
+++ b/why-hire-me.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Why Hire Me" />
+<meta property="og:description" content="Hey look, an embed! This is the why hire me page where you can read about what I do differently and why you should hire me." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/why-hire-me.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
