--- a/dualityidea.html
+++ b/dualityidea.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Duality Idea" />
+<meta property="og:description" content="Hey look, an embed! This page is here to show my idea for a Forsaken killer, cmon Forsaken devs, read this." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/dualityidea.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
