--- a/portfolio-modeling.html
+++ b/portfolio-modeling.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - 3D Models" />
+<meta property="og:description" content="Hey look, an embed! This is the modeling page of my portfolio where you can see 3D models I've made before." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/portfolio-modeling.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
