--- a/portfolio-music.html
+++ b/portfolio-music.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Music" />
+<meta property="og:description" content="Hey look, an embed! This is the music page of my portfolio where you can listen to music I've made before." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/portfolio-music.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
