--- a/schedule.html
+++ b/schedule.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - My Schedule" />
+<meta property="og:description" content="Hey look, an embed! This is my schedule where you can see when I'm busy and when I'm not/" />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/schedule.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
