--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<meta property="og:title" content="Fancy Ducc Portfolio - Testimonials" />
+<meta property="og:description" content="Hey look, an embed! This is testimonials that I've gotten for my work with other people." />
+<meta property="og:url" content="https://www.fancyduccportfolio.com/testimonials.html" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="assets/img/DuccPFP.png" />
 <html lang="en">
     <head>
         <meta charset="utf-8" />
