--- a/portfolio-modeling.html
+++ b/portfolio-modeling.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<meta property="og:title" content="Fancy Ducc Portfolio - 3D Models" />
-<meta property="og:description" content="Hey look, an embed! This is the modeling page of my portfolio where you can see 3D models I've made before." />
-<meta property="og:url" content="https://www.fancyduccportfolio.com/portfolio-modeling.html" />
-<meta property="og:type" content="website" />
-<meta property="og:image" content="assets/img/DuccPFP.png" />
+
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Fancy Ducc Portfolio - Home" />
+        <meta property="og:title" content="Fancy Ducc Portfolio - 3D Models" />
+        <meta property="og:description" content="Hey look, an embed! This is the modeling page of my portfolio where you can see 3D models I've made before." />
+        <meta property="og:url" content="https://www.fancyduccportfolio.com/portfolio-modeling.html" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://www.fancyduccportfolio.com/assets/img/DuccPFP.png" />
         <meta name="author" content="Fancy Ducc" />
-        <title>Fancy Ducc Portfolio - Home</title>
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Fancy Ducc Portfolio - 3D Models" />
+        <meta name="twitter:description" content="Roblox game dev by Fancy Ducc – see my work, explore my process, and get in touch!" />
+        <meta name="twitter:image" content="https://www.fancyduccportfolio.com/assets/img/DuccPFP.png" />
+        <meta name="robots" content="index,follow" />
+        <meta name="googlebot" content="index,follow" />
+        <meta name="theme-color" content="#5000e6" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="author" content="Fancy Ducc" />
+        <title>Fancy Ducc Portfolio - 3D Models</title>
         <link rel="icon" href="assets/img/DuccPFP.png" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
