--- a/schedule.html
+++ b/schedule.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<meta property="og:title" content="Fancy Ducc Portfolio - My Schedule" />
-<meta property="og:description" content="Hey look, an embed! This is my schedule where you can see when I'm busy and when I'm not/" />
-<meta property="og:url" content="https://www.fancyduccportfolio.com/schedule.html" />
-<meta property="og:type" content="website" />
-<meta property="og:image" content="assets/img/DuccPFP.png" />
+
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Fancy Ducc Portfolio - Home" />
+        <meta property="og:title" content="Fancy Ducc Portfolio - My Schedule" />
+        <meta property="og:description" content="Hey look, an embed! This is my schedule where you can see when I'm busy and when I'm not/" />
+        <meta property="og:url" content="https://www.fancyduccportfolio.com/schedule.html" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://www.fancyduccportfolio.com/assets/img/DuccPFP.png" />
+        <meta name="author" content="Fancy Ducc" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Fancy Ducc Portfolio - My Schedule" />
+        <meta name="twitter:description" content="Roblox game dev by Fancy Ducc – see my work, explore my process, and get in touch!" />
+        <meta name="twitter:image" content="https://www.fancyduccportfolio.com/assets/img/DuccPFP.png" />
+        <meta name="robots" content="index,follow" />
+        <meta name="googlebot" content="index,follow" />
+        <meta name="theme-color" content="#5000e6" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="author" content="Fancy Ducc" />
         <title>Fancy Ducc Portfolio - My Schedule</title>
         <link rel="icon" href="assets/img/DuccPFP.png" />
