--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <link href="css/styles.css" rel="stylesheet">
-        <link href="css/classes.css" rel="stylesheet">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
         <script src="js/warningbanner.js"></script>
     </head>
 
@@ -43,7 +41,11 @@
                 <div class="row w-100">
                     <div class="col-12">
                         <ul class="navbar-nav flex-row text-uppercase justify-content-center py-3" id="mainNavTop">
-                            <li class="nav-item"><a class="nav-link" href="index.html"><strong>Home</strong></a></li>
+                            <li class="nav-item">
+                              <button class="nav-link" href="index.html">
+                                <strong>Home</strong>
+                              </button>
+                            </li>
                             <li class="nav-item mx-3" data-submenu="portfolioSubNav">
                                 <button class="nav-link"><strong>Portfolio</strong></button>
                             </li>
