--- a/payments.html
+++ b/payments.html
@@ -24,7 +24,6 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css"/>
         <link href="css/styles.css" rel="stylesheet">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
         <script src="js/warningbanner.js"></script>
     </head>
     <body id="page-top" style="background-color: #000000; color: #f0f0f0;">
@@ -337,8 +336,10 @@
                         <p>All special service sales go on top of the current Discount, meaning if something costs 5$, is 20% off, and your special service is 60% off, then that is 1.60$!</p>
                         <p>Currently, I'm offering special services for the following games:</p>
                         <ul id="free-services-list" style="color: #f0f0f0; font-weight: bold;">
-                            <li>No Big Deal (By DiskCard / next.grips) - All Services Free Forever</li>
-                            <li>Forsaken (By souldrivenlove) - All Services 50% Off</li>
+                            <li>ARTYsync (By ARTYsync / Artycular) - All Services Free Forever</li>
+                            
+                            <li>No Big Deal (By DiskCard / next.grips) - All Services 30% Off</li>
+                            <li>Forsaken (By souldrivenlove) - All Services 40% Off</li>
                             <li>Grace (By The Fartering Few / szymon227G) - All Services 35% Off</li>
                             <li>The Skinwalker (By Otrix and Zaku) - All Services 15% Off</li>
                         </ul>
