--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
         </nav>
 
         <header class="masthead">
+          <video autoplay muted loop playsinline class="masthead-video">
+            <source src="assets/img/video/showreel.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
             <div class="masthead-content">
                 <div class="container text-center">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Hi, I'm Fancy Ducc</span></div>
@@ -99,8 +103,9 @@
         </header>
 
         <div class="divider"></div>
+        <div class="divider"></div>
 
-        <section class="page-section" id="id_here_to_match_page">
+        <section class="page-section">
             <div class="text-center">
               <img src="assets/img/DuccPFP.png" alt="Fancy Ducc Profile" style="max-width: 200px; border-radius: 50%;" loading="lazy">
             </div>
