--- a/404.html
+++ b/404.html
@@ -71,6 +71,10 @@
         </nav>
         
         <header class="masthead">
+          <video autoplay muted loop playsinline class="masthead-video">
+            <source src="assets/img/video/showreel.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
             <div class="masthead-content">
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">404</span></div>
@@ -79,6 +83,7 @@
             </div>
         </header>
 
+        <div class="divider"></div>
         <div class="divider"></div>
 
         <section class="page-section" id="id_here_to_match_page">
