--- a/dualityidea.html
+++ b/dualityidea.html
@@ -86,6 +86,10 @@
         </nav>
         
         <header class="masthead">
+          <video autoplay muted loop playsinline class="masthead-video">
+            <source src="assets/img/video/showreel.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
             <div class="masthead-content">
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Duality</span></div>
@@ -94,6 +98,7 @@
             </div>
         </header>
 
+        <div class="divider"></div>
         <div class="divider"></div>
 
         <section class="page-section" id="building">
