--- a/games.html
+++ b/games.html
@@ -85,6 +85,10 @@
             </div>
         </nav>
         <header class="masthead">
+          <video autoplay muted loop playsinline class="masthead-video">
+            <source src="assets/img/video/showreel.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
             <div class="masthead-content">
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Games</span></div>
