--- a/portfolio-music.html
+++ b/portfolio-music.html
@@ -86,6 +86,10 @@
             </div>
         </nav>
         <header class="masthead">
+          <video autoplay muted loop playsinline class="masthead-video">
+            <source src="assets/img/video/showreel.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
             <div class="masthead-content">
                 <div class="container">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Experienced Music Design</span></div>
@@ -93,6 +97,7 @@
             </div>
         </header>
 
+        <div class="divider"></div>
         <div class="divider"></div>
 
         <section class="page-section" id="music" style="background-color: #111111; color: #1a1a1a;">
