--- a/temporarynavigation.html
+++ b/temporarynavigation.html
@@ -87,6 +87,10 @@
         </nav>
 
         <header class="masthead">
+          <video autoplay muted loop playsinline class="masthead-video">
+            <source src="assets/img/video/showreel.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
             <div class="masthead-content">
                 <div class="container text-center">
                     <div class="masthead-heading"><span style="color: rgb(80, 0, 230);">Temporary Navigation</span></div>
@@ -95,6 +99,7 @@
             </div>
         </header>
 
+        <div class="divider"></div>
         <div class="divider"></div>
 
         <section class="page-section" id="emergencynavigation">
