--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="icon" href="assets/img/DuccPFP.png" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
-        <link href="css/styles.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
         <script src="js/warningbanner.js"></script>
     </head>
 
