global illumination video

--- a/portfolio-scripting.html
+++ b/portfolio-scripting.html
@@ -164,6 +164,22 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
                         <div class="portfolio-item">
+                            <video class="img-fluid" src="assets/img/video/global_illumination_and_reflections.mp4" alt="Global Illumination + Reflections"  controls></video>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Real Time Global Illumination + Reflections</div>
+                                <div class="portfolio-extra-description">
+                                    <p>After creating a raycast system that was so optimized where 1000 raycasts per frame would take up 2.6% of ALL script activity, I added a Bouncecast system to it.</p>
+                                    <p>That bouncecast system looked somewhat like light bouncing, so I wanted to push the system to it's limits, and I managed to make a real-time Global Illumination system and reflections after a few days of work.</p>
+                                    <p>GL is done with Color inheritence and very tiny lights and lots of raycasts</p>
+                                    <p>Reflections are done with Viewport Frames set to angle with the camera and to hold visuals, also using raycasting for shadows and better visuals.</p>
+                                    <p>This system runs at a comfortable and stable 120-130 FPS on my RTX 4070.</p>
+                                </div>
+                                <button class="toggle-description" style="display: none;">Show Description <span class="arrow">&#x25BC;</span></button>
+                            </div>
+                        </div>                        
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 mb-4">
+                        <div class="portfolio-item">
                             <video class="img-fluid" src="assets/img/video/sane_camera_and_footstep_system.mp4" alt="Sane Camera and Footstep System"  controls></video>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Sane Camera and Footstep System</div>
