a very goofy dance

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </section>
 
         <div class="divider"></div>
-        <!--
+
         <section class="page-section" id="creation">
           <div class="center-container">
               <div class="text-center">
@@ -128,15 +128,9 @@
               </div>
               <div class="col-lg-8 mb-4 d-flex justify-content-center">
                   <div class="portfolio-item text-center">
-                      <img class="img-fluid portfolio-image" src="assets/img/portfolio/Duality.png" alt="Duality" loading="lazy"/>
+                    <video class="img-fluid" src="assets/img/video/why_did_I_make_this.mp4" alt="Goofy Dance"  controls></video>
                       <div class="portfolio-caption">
-                          <div class="portfolio-caption-heading">Recent Creation</div>
-                          <div class="portfolio-extra-description">
-                              <p>This character I made in a day or so was the result of a dream after playing a tad bit too much of <a href="https://www.roblox.com/games/18687417158/Forsaken" target="_blank" class="hover-link">Forsaken</a>.</p>
-                              <p>After having the dream, I wrote quite a bit of the character, abilities, just some fanmade little ideas.</p>
-                              <p>Click <a href="nil" class="hover-link">HERE</a> to see everything that I wrote, it's a lot, so make sure you're ready to read a bunch.</p>
-                          </div>
-                          <button class="toggle-description" style="display: none;">Show Description <span class="arrow">&#x25BC;</span></button>
+                          <div class="portfolio-caption-heading">a very goofy dance</div>
                       </div>
                   </div>
               </div>
@@ -144,7 +138,7 @@
       </section>
 
       <div class="divider"></div>
-    -->
+
       <section class="page-section" id="process">
         <div class="container text-center">
           <h2 class="section-heading text-uppercase mb-4">My Development Process</h2>
