--- a/portfolio-music.html
+++ b/portfolio-music.html
@@ -203,6 +203,20 @@
                         </audio>
                     </div>
                     <div class="col-lg-5">
+                        <h4><span style="color: #f0f0f0;">Inter Sanitatem et Insaniam</span></h4>
+                        <div class="portfolio-caption-subheading text-muted">Ambient/Upbeat</div>
+                        <div class="custom-audio-player">
+                            <button class="play-pause-button">Play</button>
+                            <input type="range" class="seek-slider" value="0" max="100">
+                            <span class="current-time">0:00</span> / <span class="total-time">0:00</span>
+                            <input type="range" class="volume-slider" min="0" max="1" step="0.01" value="1">
+                        </div>
+                        <audio class="audio-element">
+                            <source src="assets/audio/inter_sanitatem_et_insaniam.mp3" type="audio/mp3">
+                            Your browser does not support the audio element.
+                        </audio>
+                    </div>
+                    <div class="col-lg-5">
                         <h4><span style="color: #f0f0f0;">The Art Gallery</span></h4>
                         <div class="portfolio-caption-subheading text-muted">Horror</div>
                         <div class="custom-audio-player">
