new prices and stuff

--- a/payments.html
+++ b/payments.html
@@ -109,11 +109,27 @@
                     <span style="color: #f0f0f0;">Understanding that everyone is unique, and every project comes with its own set of requirements, I try to provide flexibility when it comes to payment methods. Whether you are an independent creator on a budget or a well-established team, rest assured that I've got a payment method that suits you. You can pay for my services through a variety of methods, including Robux, group funds on Roblox, USD, or Cashapp. My goal is to make the payment process as seamless and convenient as possible for you, so you can focus more on the creative aspect of your game and less on the logistics.</span>
                 </p>
                 <p style="margin-bottom: 2rem;">
-                    <span style="color: #f0f0f0;">Prices must be paid 5% when I begin working, 35% half way done with my contribution, and the last 60% after I am done working for your project, this is to make sure that I get paid fairly for the work I do.</span>
-                </p>
-                <p style="margin-bottom: 2rem;">
                     <span style="color: #f0f0f0;">None of these prices are final, everything may or may not be adjusted to match the amount of work spent, how complex the work is, how long it takes me to complete the work, and how many features/details you request. I will not go above what you request so that you can rely on a budget.</span>
                 </p>
+                <div class="notice-container">
+                    <ul>
+                      <li><strong>Preferred:</strong> Pay with PayPal or Cash App (secure, no Roblox tax).</li>
+                      <li><strong>Robux:</strong> Must use DevEx rate (30 000 Robux = $105).</li>
+                      <li><strong>Robux + Gamepasses, T-Shirts, DevProduct:</strong> Add 30% fee for Roblox’s tax.</li>
+                      <p>To avoid extra costs, use Group Payouts.</p>
+                    </ul>
+                  </div> 
+                <div class="col-lg-14 mb-4">
+                    <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
+                        <h4 style="color: #ff3e3e;">Special Services</h4>
+                        <p>If I reach out to you on any social media (Discord, Instagram, Roblox, etc.), then chances are I am offering services for free or at a massive discount as it could be purely for learning, helping others, and of course having fun.</p>
+                        <p>All special service sales go on top of the current Discount, meaning if something costs 5$, is 20% off, and your special service is 60% off, then that is 1.60$!</p>
+                        <p>Currently, I'm offering special services for the following games:</p>
+                        <ul id="free-services-list" style="color: #f0f0f0; font-weight: bold;">
+                            <li>Blood Debt (By I Tried Atleast / sne3ze) - All Services FREE</li>
+                        </ul>
+                    </div>
+                </div>                 
                 <div id="discount-card" class="card discount-card" style="background-color: #222222; color: #f0f0f0; padding: 1rem; margin-bottom: 1rem;">
                     <h3 style="color: #ff3e3e;">Limited Time Discounts</h3>
                     <ul id="discounted-services-list" style="color: #f0f0f0;"></ul>
@@ -124,10 +140,9 @@
                         <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                             <h4 style="color: #5000e6;">Building</h4>
                             <p>
-                                Starting at: <strong class="price usd" data-original-price="8">$8/build</strong>
-                                or <strong class="price robux" data-original-price="8">400 Robux/build</strong>
+                                Starting at: <strong class="price usd" data-original-price="8">tbd</strong>
+                                or <strong class="price robux" data-original-price="8">tbd</strong>
                             </p>
-                            <p>Custom environment builds including terrains, structures, and props:</p>
                             <ul>
                                 <li>
                                     Simple Builds (e.g. small props, basic structures): <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/build</strong>
@@ -146,9 +161,8 @@
                         <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                             <h4 style="color: #5000e6;">Scripting (Luau, HTML, JavaScript, Python)</h4>
                             <p>
-                                Starting at: <strong class="price usd" data-original-price="4">$4/script</strong>
-                                or <strong class="price robux" data-original-price="4">320 Robux/script</strong>
-                            <p>Detailed scripting services:</p>
+                                Starting at: <strong class="price usd" data-original-price="4">tbd</strong>
+                                or <strong class="price robux" data-original-price="4">tbd</strong>
                             <ul>
                                 <li>
                                     Basic Scripts (ex; GUI interactions, simple mechanics): <strong style="color: #f0f0f0;" class="price usd" data-original-price="4">$4/script</strong>
@@ -183,10 +197,9 @@
                         <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                             <h4 style="color: #5000e6;">Animation (Blender, Moon Animator, Roblox Animation Editor)</h4>
                             <p>
-                                Starting at: <strong class="price usd" data-original-price="8">$8/animation</strong>
-                                or <strong class="price robux" data-original-price="8">640 Robux/animation</strong>
+                                Starting at: <strong class="price usd" data-original-price="8">Loading...</strong>
+                                or <strong class="price robux" data-original-price="8">Loading...</strong>
                             </p>
-                            <p>Prices vary based on tools and rig complexity:</p>
                             <ul>
                                 <li>
                                     <strong>Blender Animation:</strong>
@@ -236,21 +249,42 @@
                     </div>
                     <div class="col-lg-6 mb-4">
                         <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
+                            <h4 style="color: #5000e6;">Optimization Help</h4>
+                            <p>
+                                Starting at: FREE
+                            </p>
+                            <p>
+                                I will take a look at your game and give it a proper analysis on what can be optimized to help your game for FREE!
+                            </p>
+                            <p>
+                                I am also offering my help with doing the changes I recommended from the analysis so all you need to worry about is your game, and I'd handle the optimization.
+                            </p>
+                            <ul>
+                                <li>
+                                    Optimization Analysis: <strong style="color: #f0f0f0;">FREE</strong>
+                                </li>
+                                <li>
+                                    Optimization Fixes and changes: <strong style="color: #f0f0f0;" class="price usd" data-original-price="2">$2</strong>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 mb-4">
+                        <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                             <h4 style="color: #5000e6;">Music Design (All Genres)</h4>
                             <p>
-                                Starting at: <strong class="price usd" data-original-price="3">$3/asset</strong>
-                                or <strong class="price robux" data-original-price="3">240 Robux/track</strong>
+                                Starting at: <strong class="price usd" data-original-price="7">Loading...</strong>
+                                or <strong class="price robux" data-original-price="7">Loading...</strong>
                             </p>
-                            <p>Custom music creation tailored to your project needs:</p>
                             <ul>
                                 <li>
                                     <strong>Basic Tracks:</strong>
                                     <ul>
                                         <li>
-                                            Loopable Background Music (simple ambient or lofi): <strong style="color: #f0f0f0;" class="price usd" data-original-price="5">$5/track</strong>
+                                            Loopable Background Music (simple ambient or lofi): <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/track</strong>
                                         </li>
                                         <li>
-                                            Short Theme (ex; menu or level music, <1 minute):<strong style="color: #f0f0f0;" class="price usd" data-original-price="3">$3/track</strong>
+                                            Short Theme (ex; menu or level music, <1 minute):<strong style="color: #f0f0f0;" class="price usd" data-original-price="7">$7/track</strong>
                                         </li>
                                     </ul>
                                 </li>
@@ -258,10 +292,10 @@
                                     <strong>Advanced Tracks:</strong>
                                     <ul>
                                         <li>
-                                            Thematic Soundtrack (2-4 minutes): <strong style="color: #f0f0f0;" class="price usd" data-original-price="9">$9/track</strong>
+                                            Thematic Soundtrack (2-4 minutes): <strong style="color: #f0f0f0;" class="price usd" data-original-price="13">$13/track</strong>
                                         </li>
                                         <li>
-                                            Extended Soundtrack (4-8 minutes): <strong style="color: #f0f0f0;" class="price usd" data-original-price="15">$15/track</strong>
+                                            Extended Soundtrack (4-8 minutes): <strong style="color: #f0f0f0;" class="price usd" data-original-price="19">$19/track</strong>
                                         </li>
                                     </ul>
                                 </li>
@@ -270,11 +304,11 @@
                                     <ul>
                                         <li>
                                             Genre Blending (ex; horror + lofi, electronic + classical): <strong>Adding</strong>
-                                            <strong style="color: #f0f0f0;" class="price usd" data-original-price="4">$4/track</strong>
+                                            <strong style="color: #f0f0f0;" class="price usd" data-original-price="8">$8/track</strong>
                                         </li>
                                         <li>
-                                            Iteration Music (ex; music that changes speed when something happens in-game): <strong>Adding</strong>
-                                            <strong style="color: #f0f0f0;" class="price usd" data-original-price="6">$6/track</strong>
+                                            Iteration Music (ex; music that adds instruments when something happens in-game): <strong>Adding</strong>
+                                            <strong style="color: #f0f0f0;" class="price usd" data-original-price="10">$10/track</strong>
                                         </li>
                                     </ul>
                                 </li>
@@ -291,8 +325,8 @@
                         <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
                             <h4 style="color: #5000e6;">VFX (Particles, Textures)</h4>
                             <p>
-                                Starting at: <strong class="price usd" data-original-price="5">$5/asset</strong>
-                                or <strong class="price robux" data-original-price="5">400 Robux/asset</strong>
+                                Starting at: <strong class="price usd" data-original-price="5">Loading...</strong>
+                                or <strong class="price robux" data-original-price="5">Loading...</strong>
                             <p>Detailed scripting services:</p>
                             <ul>
                                 <li>
@@ -315,9 +349,9 @@
                             <h4 style="color: #5000e6;">3D Modeling (Props)</h4>
                             <p>
                                 Starting at: 
-                            <strong class="price usd" data-original-price="5">$5/asset</strong>
+                            <strong class="price usd" data-original-price="5">Loading...</strong>
                                 or 
-                            <strong class="price robux" data-original-price="5">400 Robux/asset</strong>
+                            <strong class="price robux" data-original-price="5">Loading...</strong>
                             </p>
                             <p>Simple, effective models for game assets, these are limited as I am not completely professional at 3D Modeling:</p>
                             <ul>
@@ -326,22 +360,6 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="col-lg-14 mb-4">
-                    <div class="card" style="background-color: #222222; padding: 1rem; min-height: 300px;">
-                        <h4 style="color: #ff3e3e;">Special Services</h4>
-                        <p>If I reach out to you on any social media (Discord, Instagram, Roblox, etc.), then chances are I am offering services for free or at a massive discount as it could be purely for learning, helping others, and of course having fun.</p>
-                        <p>All special service sales go on top of the current Discount, meaning if something costs 5$, is 20% off, and your special service is 60% off, then that is 1.60$!</p>
-                        <p>Currently, I'm offering special services for the following games:</p>
-                        <ul id="free-services-list" style="color: #f0f0f0; font-weight: bold;">
-                            <li>No Big Deal (By DiskCard / next.grips) - All Services 30% Off</li>
-                            <li>Forsaken (By souldrivenlove) - All Services 40% Off</li>
-                            <li>Grace (By The Fartering Few / szymon227G) - All Services 35% Off</li>
-                            <li>The Skinwalker (By Otrix and Zaku) - All Services 15% Off</li>
-                        </ul>
                     </div>
                 </div>
             </div>
